--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,9 +27,33 @@ dist.dir=dist
 dist.jar=${dist.dir}/Kerone_Demo.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.hamcrest-core-1.3.jar=lib\\hamcrest-core-1.3.jar
+file.reference.jcommon-1.0.23.jar=lib\\jcommon-1.0.23.jar
+file.reference.jfreechart-1.0.19-experimental.jar=lib\\jfreechart-1.0.19-experimental.jar
+file.reference.jfreechart-1.0.19-swt.jar=lib\\jfreechart-1.0.19-swt.jar
+file.reference.jfreechart-1.0.19.jar=lib\\jfreechart-1.0.19.jar
+file.reference.jfreesvg-2.0.jar=lib\\jfreesvg-2.0.jar
+file.reference.junit-4.11.jar=lib\\junit-4.11.jar
+file.reference.nrjavaserial-3.9.1.jar=lib\\nrjavaserial-3.9.1.jar
+file.reference.orsoncharts-1.4-eval-nofx.jar=lib\\orsoncharts-1.4-eval-nofx.jar
+file.reference.orsonpdf-1.6-eval.jar=lib\\orsonpdf-1.6-eval.jar
+file.reference.servlet.jar=lib\\servlet.jar
+file.reference.swtgraphics2d.jar=lib\\swtgraphics2d.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.hamcrest-core-1.3.jar}:\
+    ${file.reference.jcommon-1.0.23.jar}:\
+    ${file.reference.jfreechart-1.0.19-experimental.jar}:\
+    ${file.reference.jfreechart-1.0.19-swt.jar}:\
+    ${file.reference.jfreechart-1.0.19.jar}:\
+    ${file.reference.jfreesvg-2.0.jar}:\
+    ${file.reference.junit-4.11.jar}:\
+    ${file.reference.orsoncharts-1.4-eval-nofx.jar}:\
+    ${file.reference.orsonpdf-1.6-eval.jar}:\
+    ${file.reference.servlet.jar}:\
+    ${file.reference.swtgraphics2d.jar}:\
+    ${file.reference.nrjavaserial-3.9.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -54,7 +78,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=kerone_demo.Kerone_Demo
+main.class=kerone_demo.Main_Frame
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
